[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scena/mission_intro/body.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/popup/game_menu/game_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/popup/warning/warning.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scena/mission_intro/fighting/mission_fighting.gd" type="Script" id=4]
[ext_resource path="res://src/ui/science_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/popup/game_event/game_event.tscn" type="PackedScene" id=6]

[node name="SCENA" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="body_scena" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="Control" parent="." instance=ExtResource( 5 )]

[node name="game_menu" parent="." instance=ExtResource( 2 )]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -105.0
margin_right = 85.0
margin_bottom = 105.0

[node name="GameEvent" parent="." instance=ExtResource( 6 )]
pause_mode = 2
margin_bottom = 0.0
popup_exclusive = true

[node name="warning" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0
margin_bottom = 80.0
rect_min_size = Vector2( 1024, 80 )
